--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ h3 {
     font-size: 18px;
     text-align: center;
     line-height: 32px;
-    text-shadow: 0.5px 1px 0.5px rgb(177, 168, 168);
+    text-shadow: 0.5px 0.5px 0.5px rgba(177, 168, 168, 0.3);
     border: 1px solid gray;
     border-radius: 3px;
     transition: 1s;
